# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
config/: dev.toml  prod.toml
src/application/common/: exceptions.py  interfaces.py
src/application/users/: exceptions.py
src/application/users/dto/: __init__.py  models.py
src/application/users/interactors/: __init__.py  get_user.py
src/application/users/interfaces/persistence/: __init__.py  repo.py
src/infrastructure/: config_loader.py
src/infrastructure/database/: config.py  exception_mapper.py  main.py  uow.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 2023_08_18_1727-a3c0c2c09683_uuid_generation.py  2023_09_10_1857-3ca63286765c_create_user_table.py  2023_10_02_1705-d852e9ae6f18_create_user_table.py  2023_10_06_1229-e0f2c7a77bdb_create_user_table.py
src/infrastructure/database/models/: __init__.py  base.py  user.py
src/infrastructure/database/repositories/: users.py
src/infrastructure/di/: __init__.py  main.py
src/infrastructure/logging/: config.py
src/presentation/api/: config.py  main.py
src/presentation/api/controllers/: __init__.py  exceptions.py  healthcheck.py  routers.py  users.py
src/presentation/api/controllers/requests/: __init__.py  users.py
src/presentation/api/controllers/responses/: exceptions.py
src/presentation/api/middlewares/: __init__.py  main.py
src/presentation/api/providers/: __init__.py  di.py  main.py  stub.py
src/presentation/api/providers/build_interactors/: __init__.py  users.py
tests/integration/: conftest.py  contest.py  test_stairway.py
tests/integration/api/: conftest.py
